--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,9 +6,8 @@ name: Node.js CI
 on:
   push:
     branches: [ "dev" ]
-    tags: [ "task" ]
   pull_request:
-    branches: [ "dev" ]
+    branches: [ "dev", "task**" ]
 
 jobs:
   build:
