--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ "dev" ]
   pull_request:
-    branches: [ "dev", "task**" ]
+    branches: [ "dev", "**task**" ]
 
 jobs:
   build:
